2016-08-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.11 released.

2016-08-14  Carl Hetherington  <cth@carlh.net>

	* Support subtitles in imported DCPs.

	* Updated zh_CN translation from 刘汉源.

2016-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.10 released.

2016-08-09  Carl Hetherington  <cth@carlh.net>

	* Improve rendering of outlined burnt-in subtitles a bit.

2016-08-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.9 released.

2016-08-04  Carl Hetherington  <cth@carlh.net>

	* Add button to export entire DCP decryption chain.

2016-07-31  Carl Hetherington  <cth@carlh.net>

	* Allow configuration of MXF/XML filenames (part of #710).

2016-07-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.8 released.

2016-07-29  c.hetherington  <cth@carlh.net>

	* Fix various problems with separate L/R eye
	content.

	* Rearrange Make KDM window and replace the
	confusing OK/Cancel buttons with "Make KDM" (part of #848).
	Rearrange the KDM Creator window similarly.

	* Allow configuration of KDM filename format.

2016-07-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.7 released.

2016-07-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.6 released.

2016-07-28  Carl Hetherington  <cth@carlh.net>

	* Fix start-trim of audio-only content (#915).

2016-07-26  Carl Hetherington  <cth@carlh.net>

	* Expand vertical size of servers list in preferences (#913).

2016-07-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.5 released.

2016-07-20  Carl Hetherington  <cth@carlh.net>

	* Add -t option to dcpomatic2_cli to override the configured
	local thread count.

	* Version 2.9.4 released.

2016-07-20  Carl Hetherington  <cth@carlh.net>

	* Try to fix -r option to dcpomatic_cli.

	* Try to fix intermittent hangs with encoding servers.

2016-07-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.3 released.

2016-07-14  Carl Hetherington  <cth@carlh.net>

	* Use default configuration if the config.xml failed to load;