@@ -1,3 +1,7 @@
+2016-08-16  c.hetherington  <cth@carlh.net>
+
+	* Simple information on mouse position in the video waveform (part of #932).
+
 2016-08-15  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.9.11 released.
